Dbms is changed

--- a/Market/appsettings.json
+++ b/Market/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "persistsecurityinfo=True;port=3308;Server=localhost;Database=Market;user id=root;password=logwriter;SslMode=none;"
+    "DataBase": "Server=localhost;Port=5432;Database=mundoalegre;User Id=postgres;Password=root;"
   },
   "URLs": {
     "UI": "http://localhost:4200",
